deploy/human-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: human
spec:
  replicas: 1
  selector:
    matchLabels:
      app: human
  template:
    metadata:
      labels:
        app: human
    spec:
      containers:
      - name: human
        image: docker.io/alphabet5/human:latest
        ports:
        - containerPort: 80
        imagePullPolicy: Always
        readinessProbe:
          tcpSocket:
            port: 80
          periodSeconds: 10
          failureThreshold: 2
        livenessProbe:
          tcpSocket:
            port: 80
          periodSeconds: 10
          failureThreshold: 30
        startupProbe:
          tcpSocket:
            port: 80
          periodSeconds: 1
          failureThreshold: 30
