deploy/human-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: human
spec:
  selector:
    app: human
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
